--- a/excercise-1.Rmd
+++ b/excercise-1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exercise 1"
+title: "Data Wrangling Exercise 2: Dealing with missing values"
 author: "Clayton Glasser"
 date: "June 21, 2018"
 output: html_document
