--- a/exercise-2.Rmd
+++ b/exercise-2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exercise 2"
+title: "Data Wrangling Exercise 1: Basic Data Manipulation"
 author: "Clayton Glasser"
 date: "June 21, 2018"
 output: html_document
