--- a/exercise-2.Rmd
+++ b/exercise-2.Rmd
@@ -18,9 +18,9 @@ titanic
 # 2
 * Store "s" in any occurance of NA inside the `embark` column then
 * Calculate the mean of all the entries in the `age` column, excluding any missing values, and store it in `mean_age` then
-* Store `mean_age` in any occurance of NA inside the `embark` column then
+* Store `mean_age` in any occurance of NA inside the `age` column then
 * Store "none" in any instance which is NA inside the `boat` column then
-* Into `titanic` store `titanic` then add a column called `has_cabin_number` the instances of which are equal to 0 if NA, otherwise are 1. 
+* If instance of `titanic$cabin` is NaN set it equal numeric 0, else numeric 1, assign it to new column: `has_cabin_number`, add new column to dataframe `titanic`, and store new new `titanic` in original `titanic`. 
 
 ```{r}
 titanic$embarked[is.na(titanic$embarked)] <- "s"
